# bgl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
datasets/: karate.tsv  karate.tsv.zst
examples/: CMakeLists.txt  binary_output.cpp  distance_distribution.cpp  read_bench.cpp  tsv_output.cpp
extlib/: apathy.hpp  catch_main.cpp  path.hpp  radix_heap.hpp
extlib/zstd/: CMakeLists.txt  zstd.h
include/bgl/: bgl.hpp
include/bgl/data_structure/: aligned_array.hpp  all.hpp  hyperloglog_array.hpp  union_find.hpp
include/bgl/graph/: all.hpp  basic_graph.hpp  cui.hpp  io.hpp  visitor.hpp
include/bgl/graph/analysis/: all.hpp  clustering_coefficient.hpp  connectivity.hpp  elimination.hpp  hyperball.hpp  minimum_degree.hpp  slashburn.hpp
include/bgl/graph/generator/: all.hpp  basic_generator.hpp  basic_random_generator.hpp
include/bgl/linalg/: all.hpp  base.hpp  bicgstab.hpp  gmres.hpp  lu.hpp
include/bgl/util/: all.hpp  assertion.hpp  avx_allocator.hpp  container_manipulation.hpp  demangle_typeid.hpp  file.hpp  floating_point.hpp  fmt.hpp  irange.hpp  lambda.hpp  logging.hpp  random.hpp  zstd.hpp
playground/: .gitignore  CMakeLists.txt  Makefile  README.md  sample_main.cpp
projects/: .gitignore  CMakeLists.txt
projects/sample-project/: CMakeLists.txt  Makefile
projects/sample-project/src/: sample_main.cpp
projects/sample-project/test/: sample.cpp
src/: CMakeLists.txt  bgl.hpp
src/base/: base.hpp  console_color.cpp  console_color.hpp  container_manipulation.hpp  container_manipulation_test.cpp  fmt.hpp  irange.hpp  irange_test.cpp  logging.cpp  logging.hpp  logging_test.cpp  macro.hpp  random.cpp  random.hpp  random_test.cpp
src/graph/: all.hpp  basic_graph.hpp  basic_graph_test.cpp  cui.hpp  io.hpp  io_test.cpp  visitor.hpp  visitor_test.cpp
src/graph/generator/: basic_generator.hpp  basic_generator_test.cpp
src/util/: all.hpp  assertion.hpp  assertion_test.cpp  console_color.hpp  container_manipulation.hpp  container_manipulation_test.cpp  demangle_typeid.hpp  file.hpp  file_test.cpp  floating_point.hpp  floating_point_test.cpp  fmt.hpp  irange.hpp  irange_test.cpp  lambda.hpp  lambda_test.cpp  logging.hpp  logging_test.cpp  macro.hpp  macro_test.cpp  random.hpp  random_test.cpp
test/: CMakeLists.txt
test/data_structure/: hyperloglog_array.cpp  union_find.cpp
test/graph/: basic_graph.cpp  io.cpp  visitor.cpp
test/graph/analysis/: connectivity.cpp
test/graph/generator/: basic_generator.cpp  basic_random_generator.cpp
test/graph/linalg/: lu.cpp
test/linalg/: lu-gmres-bicgstab.cpp  lu-gmres.cpp
test/util/: avx_allocator.cpp  container_manipulation.cpp  file.cpp  floating_point.cpp  irange.cpp  lambda.cpp  random.cpp
tutorial/: 00-utility.cpp  01-graph_type.cpp  02-file_io.cpp  03-graph_access.cpp
