
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${bgl_SOURCE_DIR}/bin)

file(GLOB_RECURSE TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR} *_test.cpp)
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
list(REMOVE_ITEM SOURCES ${TEST_SOURCES})

add_executable(run_tests ${TEST_SOURCES} ${TEST_LIBRARY})
target_link_libraries(run_tests PRIVATE ${EXT_LIBRARIES})
